--- a/Andrew_Jensen_Dissertation.tex
+++ b/Andrew_Jensen_Dissertation.tex
@@ -13,6 +13,9 @@
 \usepackage[capitalise]{cleveref}
 \usepackage{mathtools}
 \usepackage{threeparttable}
+\usepackage{multirow}
+\usepackage{pdflscape}
+\usepackage{enumitem}
 
 \creflabelformat{equation}{#2 \textup{#1}#3}
 \crefdefaultlabelformat{#2 \textup{#1}#3}
