--- a/src/JTML/chX-jtml.tex
+++ b/src/JTML/chX-jtml.tex
@@ -90,20 +90,23 @@ The RMS differences for initial pose estimates on ground-truth images were small
 Due to poor sensitivity for measuring out-of-plane translation with monocular vision, the mediolateral translation had the largest RMS differences for both image types.
 
 
-\begin{table}[h!]
-	\small
-	\centering
-	\caption{RMS Differences Between NFD Initial Estimates and Human Supervised Kinematics}
-	\label{tab:nfd-rms}
-	\begin{tabularx}{1.0\linewidth}[h!]{|XX|XXX|XXX|}
-		\hline
-		\textbf{Implant} & \textbf{Images} & $x_{trans} (mm)$ & $y_{trans} (mm)$ & $z_{trans} (mm)$ & $z_{rot} (^{\circ})$ & $x_{rot} (^{\circ})$ & $y_{rot} (^{\circ})$ \\ \hline
-		Femoral          & CNN             & 2.37             & 0.71             & 17.59            & 2.54                 & 2.45                 & 4.75                 \\ \hline
-		Femoral          & Ground-Truth    & 2.06             & 0.57             & 13.53            & 0.85                 & 1.42                 & 4.00                 \\ \hline
-		Tibial           & CNN             & 2.06             & 1.49             & 29.93            & 0.94                 & 5.59                 & 9.47                 \\ \hline
-		Tibial           & Ground-Truth    & 2.05             & 0.87             & 14.60            & 0.55                 & 4.73                 & 6.23                 \\ \hline
-	\end{tabularx}
-\end{table}
+\begin{landscape}
+	\begin{table}[h!]
+		\small
+		\centering
+		\caption{RMS differences between NFD initial estimates and human supervised kinematics}
+		\label{tab:nfd-rms}
+		\begin{tabularx}{1.0\linewidth}[h!]{XXXXXXXX}
+			\hline
+			Implant & Images       & $x_{trans} (mm)$ & $y_{trans} (mm)$ & $z_{trans} (mm)$ & $z_{rot} (^{\circ})$ & $x_{rot} (^{\circ})$ & $y_{rot} (^{\circ})$ \\ \hline
+			Femoral & CNN          & 2.37             & 0.71             & 17.59            & 2.54                 & 2.45                 & 4.75                 \\
+			Femoral & Ground-Truth & 2.06             & 0.57             & 13.53            & 0.85                 & 1.42                 & 4.00                 \\
+			Tibial  & CNN          & 2.06             & 1.49             & 29.93            & 0.94                 & 5.59                 & 9.47                 \\
+			Tibial  & Ground-Truth & 2.05             & 0.87             & 14.60            & 0.55                 & 4.73                 & 6.23                 \\ \hline
+		\end{tabularx}
+	\end{table}
+\end{landscape}
+
 
 RMS differences between DIRECT-JTA optimized kinematics and human-supervised kinematics were sub-millimeters for all in-plane translations (\cref{tab:direct-rms}).
 Mediolateral translations and out-of-plane rotation differences were smaller when the pose of the tibia was outside the ambiguous zone.
@@ -113,10 +116,10 @@ The RMS differences for the completely naïve test set were within 0.5 mm or 0.5
 \begin{table}[ht]
 	\small
 	\centering
-	\caption{RMS Differences Between DIRECT-JTA Optimized and Human Supervised Kinematics}
+	\caption{RMS differences between DIRECT-JTA optimized and human supervised kinematics}
 	\label{tab:direct-rms}
 	\begin{threeparttable}
-		\begin{tabularx}{\linewidth}{|XX|X|XXXXXX|}
+		\begin{tabularx}{\linewidth}{XXXXXXXXX}
 			\hline
 			Test Set & Image Group & Num. Images & A/P (mm) & S/I (mm)      & M/L (mm)      & Flx/Ext ($^{\circ}$) & I/E ($^{\circ}$) & V/V ($^{\circ}$) \\ % Note mark here
 			\hline
