--- a/src/aim4-shape-sensitivity/ss_src/6_conclusion.tex
+++ b/src/aim4-shape-sensitivity/ss_src/6_conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion}
+\section{Concluding Remarks}
 This study demonstrates intrinsic differences between implant types regarding projected 2D shape sensitivity.
 Measurement difficulties aligned with low sensitivity along problematic axes—humeral internal rotation and tibial symmetry traps.
 Fundamentally, small orientation changes yielded negligible 2D variability for near-symmetrical geometries and axes.
