Added conclusion. Minor edits througohut

--- a/src/JTML/chX-jtml.tex
+++ b/src/JTML/chX-jtml.tex
@@ -152,7 +152,10 @@ There was one femoral blunder and 43 tibial blunders out of 392 test images. Usi
 	\label{fig:sym-trap}
 \end{figure}
 
-One-hundred thirteen image pairs from an RSA study of TKA were used to independently assess the accuracy of the autonomous kinematics measurement for single-plane lateral TKA images. RMS errors were 0.8mm for AP translation, 0.5mm for SI translation, 2.6mm for ML translation, 1.0° for flexion/extension, 1.2° for abduction/adduction, and 1.7° for internal/external rotation. At a different institution, 45 single-plane radiographic images were acquired with an instrumented sawbones phantom that was independently tracked using motion capture. Comparing the motion capture and autonomously measured radiographic kinematics, the RMS errors were 0.72mm for AP translation, 0.31mm for SI translation, 1.82mm for ML translation, 0.56° for flexion-extension, 0.63° for abduction-adduction, and 0.84° for internal-external rotation.
+One-hundred thirteen image pairs from an RSA study of TKA were used to independently assess the accuracy of the autonomous kinematics measurement for single-plane lateral TKA images.
+RMS errors were 0.8mm for AP translation, 0.5mm for SI translation, 2.6mm for ML translation, 1.0° for flexion/extension, 1.2° for abduction/adduction, and 1.7° for internal/external rotation.
+At a different institution, 45 single-plane radiographic images were acquired with an instrumented sawbones phantom that was independently tracked using motion capture.
+Comparing the motion capture and autonomously measured radiographic kinematics, the RMS errors were 0.72mm for AP translation, 0.31mm for SI translation, 1.82mm for ML translation, 0.56° for flexion-extension, 0.63° for abduction-adduction, and 0.84° for internal-external rotation.
 
 \section{Discussion}
 Dynamic radiographic measurement of 3D TKA kinematics has provided important information for implant design and surgical technique for over 30 years. Many surgeons have expressed an interest in utilizing this type of measurement in their clinical practices; however, current methods are impractical. We developed a completely autonomous TKA kinematics measurement pipeline that can potentially provide a practical method for clinical implementation. This study sought to answer three questions, (1) How well does a neural network segment TKA implants from fluoroscopic and flat-panel images? (2) How well can an NFD shape library estimate the pose of a TKA implant given a CNN-segmented image? And (3) How well does a Lipschitzian optimization routine replicate human-supervised kinematics for TKA implants given an approximate initial guess?
