--- a/Andrew_Jensen_Dissertation.tex
+++ b/Andrew_Jensen_Dissertation.tex
@@ -16,6 +16,8 @@
 \usepackage{multirow}
 \usepackage{pdflscape}
 \usepackage{enumitem}
+\usepackage{array}
+\usepackage{varwidth}
 
 \creflabelformat{equation}{#2 \textup{#1}#3}
 \crefdefaultlabelformat{#2 \textup{#1}#3}
@@ -91,6 +93,7 @@
 \include{src/SymTrap/sym_trap_paper}
 \include{src/aim3/aim3}
 \include{src/aim4-shape-sensitivity/aim4}
+\include{src/conclusion/conclusion}
 %\chapter{EXAMPLES OF EDITOR/Author TOOLS, TABLES, AND IMAGES}% Notice that we can use chapter/section etc breaks in the master file if we want, and then use \input instead of \include to avoid unneccessary page breaks.
 %\input{editorAndAuthorRemarks}%     Stuff about using editorRemark and authorRemark commands
 %\input{includingTablesExamples}%    Stuff about using Tables.
