Last sentence of conclusion

--- a/src/conclusion/conclusion.tex
+++ b/src/conclusion/conclusion.tex
@@ -72,12 +72,17 @@ Such approaches could potentially facilitate more accurate and efficient optimiz
 
 \section{Theoretical and Practical Contributions}
 This work presented in this dissertation offer many avenues of theoretical and practical contributions.
-Notably, this presents the fully end-to-end algorithm for autonomously measuring joint replacement kinematics from single-plane images.
+Notably, this presents the first fully end-to-end algorithm for autonomously measuring joint replacement kinematics from single-plane images.
 The software is open source, with both American and international users.
 The algorithm for determining symmetric orientations is entirely novel.
 This provides a method for simplifying optimization for any model-image registration task, not limited to those in the orthopaedic domain.
 Lastly, the rigorous approach established to measure the sensitivity of projected shape is the first of it's kind.
 While there exists no precedent for the analysis of these data, this provides a simple methodology to study the benefits and limitations of specific imaging protocols for measuring joint replacement kinematics.
+
+\section{Concluding Remarks}
+I believe that with the capabilities presented in this dissertation, a clinically practical platform for measuring joint replacement kinematics will soon be possible.
+
+
 
 %%% Local Variables:
 %%% mode: latex
